Mise à jour de docInscrire.html avec les nouvelles modifications

--- a/public/userInscrire.html
+++ b/public/userInscrire.html
@@ -394,7 +394,7 @@
                         <rect x="10" y="15" width="20" height="20" fill="#76b5c5" />
                         <polygon points="30,15 40,25 30,35" fill="#a7c5d1" />
                         <text x="50" y="25" fill="#ffffff" font-size="18" font-weight="bold">MediStatView</text>
-                        <text x="50" y="40" fill="#a7c5d1" font-size="12">MAROC</text>
+                        <text x="50" y="40" fill="#a7c5d1" font-size="12">SERVICES</text>
                     </svg>
                 </div>
             </div>
@@ -544,7 +544,7 @@
                     <div class="checkbox-group">
                         <label>
                             <input type="checkbox" name="terms" required>
-                            J'accepte les <a href="terms.php">conditions d'utilisation</a> et la <a href="privacy.php">politique de confidentialité</a> de MediStatView
+                            J'accepte les <a href="terms&privacy.html"> conditions d'utilisation et la politique de confidentialité</a>  de MediStatView
                         </label>
                     </div>
 
