--- a/public/docInscrire.html
+++ b/public/docInscrire.html
@@ -408,7 +408,7 @@
                 <h1>Demande d'accès médecin</h1>
                 <p class="welcome-text">Complétez ce formulaire pour demander un accès à la plateforme MediStatView pour les professionnels de santé au Maroc</p>
 
-                <form id="registrationForm" action="doctor-register-process.php" method="post" enctype="multipart/form-data">
+                <form id="registrationForm" action="docInscrire.html" method="post" enctype="multipart/form-data">
                     <h2 class="section-title">Informations personnelles</h2>
                     
                     <div class="form-row">
@@ -549,7 +549,14 @@
                         <h3>Conditions d'utilisation</h3>
                         <div class="terms-checkbox">
                             <input type="checkbox" id="terms_agree" name="terms_agree" required>
-                            <label for="terms_agree">J'accepte les <a href="terms-conditions.php" target="_blank">conditions générales d'utilisation</a> et la <a href="privacy-policy.php" target="_blank">politique de confidentialité</a> de MediStatView. Je certifie être inscrit(e) à l'Ordre National des Médecins et autorise la vérification de mes informations professionnelles.</label>
+                            <label for="terms_agree">
+                                J'accepte les 
+                                <a href="docTermesprivacy.html">
+                                  conditions générales d'utilisation et la politique de confidentialité
+                                </a> 
+                                de MediStatView. Je certifie être inscrit(e) à l'Ordre National des Médecins et autorise la vérification de mes informations professionnelles.
+                              </label>
+                              
                         </div>
                     </div>
 
@@ -590,5 +597,12 @@
         </div>
     </footer>
 
+    <script>
+        // Script pour afficher le nom du fichier sélectionné
+        document.getElementById('carte_professionnelle').addEventListener('change', function() {
+            const fileName = this.files[0]?.name || 'Aucun fichier choisi';
+            document.getElementById('carte_fichier_nom').textContent = fileName;
+        });
+    </script>
 </body>
 </html>
